Reformatando e Limpando o Código com CTRL + ALT + L no projeto todo